Fixed movie title clipping in player

--- a/CSS/css-scyfin/disable-static-drawer-backdrop.css
+++ b/CSS/css-scyfin/disable-static-drawer-backdrop.css
@@ -72,7 +72,7 @@
 }
 
 /* Background for home, hamburger, and Jellyfin */
-.layout-desktop .headerLeft::before {
+.layout-desktop:not(.transparentDocument) .headerLeft::before {
     content: "";
     position: absolute;
     top: 0;
