--- a/CSS/css-scyfin/disable-static-drawer.css
+++ b/CSS/css-scyfin/disable-static-drawer.css
@@ -66,7 +66,7 @@
 }
 
 /* Background for home, hamburger, and Jellyfin */
-.layout-desktop .headerLeft::before {
+.layout-desktop:not(.transparentDocument) .headerLeft::before {
     content: "";
     position: absolute;
     top: 0;
